20250315-fix: sonar fixes